--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "yargs": "^7.1.0"
   },
   "scripts": {
-    "start": "node public/main.js"
+    "spah": "node public/main.js",
+    "start": "node public/main.js",
+    "build": "webpack"
   },
   "devDependencies": {
     "babel-core": "^6.24.1",
