--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "es6-promise": "^4.1.0",
     "fs-extra": "^2.1.2",
+    "inquirer": "^3.0.6",
     "yargs": "^7.1.0"
   },
   "scripts": {
