--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "aloerina01 <kiss_mint27@yahoo.co.jp>",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^1.1.3",
     "es6-promise": "^4.1.0",
     "fs-extra": "^2.1.2",
     "inquirer": "^3.0.6",
