Modify name property in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new-page-cli",
+  "name": "SPA Helper",
   "version": "1.0.0",
   "main": "main.js",
   "repository": "git@github.com:aloerina01/new-page-cli.git",
